set overflow to hidden on super user menu to fix extra pixel hover problem. #7269

--- a/resources/gato-template-txstate2015/css/_superuser.scss
+++ b/resources/gato-template-txstate2015/css/_superuser.scss
@@ -13,6 +13,7 @@
   @extend .grid-cell;
   padding: 0px;
   width: 50%;
+  overflow: hidden;
   &.super-list-left {
     & > li:first-child { margin-left: -1.4rem; }
   }
